{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 8,
  "lineage": "a83120b3-d7fa-9e3a-1ffe-331700291ce4",
  "resources": [
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "bny-tg",
      "provider": "module.lb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:816069135289:targetgroup/bny-default-tg/5a4e74f86fa7774e",
            "arn_suffix": "targetgroup/bny-default-tg/5a4e74f86fa7774e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/index.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:816069135289:targetgroup/bny-default-tg/5a4e74f86fa7774e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:816069135289:loadbalancer/app/bny-default-lb/5753bdc10dee4c5c"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "bny-default-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "bny-default-tg"
            },
            "tags_all": {
              "Name": "bny-default-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00b05c20dc0624037"
          },
          "dependencies": [
            "module.vpc.aws_vpc.bny"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateip",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01aad2f8354136a76",
            "arn": "arn:aws:ec2:ap-south-1:816069135289:elastic-ip/eipalloc-01aad2f8354136a76",
            "association_id": "eipassoc-0f08349e3a08e0b26",
            "domain": "vpc",
            "id": "eipalloc-01aad2f8354136a76",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-094944e7ea5d93b18",
            "private_dns": "ip-10-0-2-81.ap-south-1.compute.internal",
            "private_ip": "10.0.2.81",
            "public_dns": "ec2-3-7-132-42.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.7.132.42",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "bny-nateip-default"
            },
            "tags_all": {
              "Name": "bny-nateip-default"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.bny-igw",
            "module.vpc.aws_vpc.bny"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "bny-igw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:816069135289:internet-gateway/igw-034518d1c61cbd453",
            "id": "igw-034518d1c61cbd453",
            "owner_id": "816069135289",
            "tags": {
              "Name": "bny-igw-default"
            },
            "tags_all": {
              "Name": "bny-igw-default"
            },
            "vpc_id": "vpc-00b05c20dc0624037"
          },
          "dependencies": [
            "module.vpc.aws_vpc.bny"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bnysg-alb",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:816069135289:security-group/sg-0f97f4186ee9a97e0",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f97f4186ee9a97e0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bny-default-sg-alb",
            "name_prefix": "",
            "owner_id": "816069135289",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00b05c20dc0624037"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.bny"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bnysg-ec2",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:816069135289:security-group/sg-0a7c02cdfbaadb63a",
            "description": "Security group for EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a7c02cdfbaadb63a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f97f4186ee9a97e0"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bny-default-sg-ec2",
            "name_prefix": "",
            "owner_id": "816069135289",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00b05c20dc0624037"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.bnysg-alb",
            "module.vpc.aws_vpc.bny"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bnysg-rds",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:816069135289:security-group/sg-0f225b7f776ed7d71",
            "description": "Security group for EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f225b7f776ed7d71",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a7c02cdfbaadb63a"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a7c02cdfbaadb63a"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bny-default-rds-ec2",
            "name_prefix": "",
            "owner_id": "816069135289",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00b05c20dc0624037"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.bnysg-alb",
            "module.vpc.aws_security_group.bnysg-ec2",
            "module.vpc.aws_vpc.bny"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bnyprivatesubnetA",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:816069135289:subnet/subnet-0903faf2cfe21516f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0903faf2cfe21516f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816069135289",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bny-default-privatesubnetA"
            },
            "tags_all": {
              "Name": "bny-default-privatesubnetA"
            },
            "vpc_id": "vpc-00b05c20dc0624037"
          },
          "dependencies": [
            "module.vpc.aws_vpc.bny",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bnyprivatesubnetB",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:816069135289:subnet/subnet-0c946949966b8bd6d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c946949966b8bd6d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816069135289",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bny-default-privatesubnetB"
            },
            "tags_all": {
              "Name": "bny-default-privatesubnetB"
            },
            "vpc_id": "vpc-00b05c20dc0624037"
          },
          "dependencies": [
            "module.vpc.aws_vpc.bny",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bnypublicsubnetA",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:816069135289:subnet/subnet-088d4f43f2dca286d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088d4f43f2dca286d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "816069135289",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bny-default-publicsubnetA"
            },
            "tags_all": {
              "Name": "bny-default-publicsubnetA"
            },
            "vpc_id": "vpc-00b05c20dc0624037"
          },
          "dependencies": [
            "module.vpc.aws_vpc.bny",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bnypublicsubnetB",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:816069135289:subnet/subnet-03e3ad7c7230be4b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e3ad7c7230be4b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "816069135289",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bny-default-publicsubnetB"
            },
            "tags_all": {
              "Name": "bny-default-publicsubnetB"
            },
            "vpc_id": "vpc-00b05c20dc0624037"
          },
          "dependencies": [
            "module.vpc.aws_vpc.bny",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "bny",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:816069135289:vpc/vpc-00b05c20dc0624037",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0db4f5c8a77bb94f9",
            "default_route_table_id": "rtb-0afc23b7182e1622c",
            "default_security_group_id": "sg-08cc0d097dd5c5ceb",
            "dhcp_options_id": "dopt-0cfa9a70821804df8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00b05c20dc0624037",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0afc23b7182e1622c",
            "owner_id": "816069135289",
            "tags": {
              "Name": "bny-default-vpc"
            },
            "tags_all": {
              "Name": "bny-default-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}